# svenska-vandringsleder

./: README.md  check_all.py  pyproject.toml
Notebook/: Baturkartan.csv  Naturkartan.ipynb  REST-api nvpub.vic-metria.nu friluftsliv.ipynb
Notebook/.ipynb_checkpoints/: REST-api nvpub.vic-metria.nu friluftsliv-checkpoint.ipynb
data/: Sörmlandsleden.csv  sundsvall-fritidsled.geojson
